# ros_ign_gazebo_manager

./: CMakeLists.txt  README.md
ros_ign_gazebo_manager/: CMakeLists.txt  ign_gazebo_interface.py  package.xml
ros_ign_gazebo_manager/launch/: test.launch.py
ros_ign_gazebo_manager/ros_ign_gazebo_manager/: ign_gazebo_interface.py
ros_ign_gazebo_manager/scripts/: ign_demo.py
ros_ign_gazebo_manager/src/: ign_gazebo_manager.cpp  service_bridge.hpp
ros_ign_interfaces/: CMakeLists.txt  package.xml
ros_ign_interfaces/msg/: EntityFactory.msg  WorldControl.msg
ros_ign_interfaces/srv/: ControlWorld.srv  CreateModel.srv  MoveModel.srv
scripts/: ign_demo.py
src/: ign_gazebo_manager.cpp  service_bridge.hpp
